<resources>
    // Title strings
    <string name="app_name">NutritionApp</string>
    <string name="app_title">Nutrition</string>


    // Header strings
    <string name="page_title">Title</string>

    // Main page strings
    <string name="diet_click">Diet</string>
    <string name="exercise_click">Workout</string>

    // Diet page strings
    <string name="diet_title">Diet</string>
    <string name="create_meal">Create Meal</string>

    // Add Food page strings
    <string name="add_food">Add Food</string>
    <string name="food_name">Food Name: </string>
    <string name="meas_type">Measure Type: </string>
    <string name="oz">oz: </string>
    <string name="gram">gram: </string>

    // Daily Nutrition
    <string name="nutrition_title">Daily Nutrition</string>
    <string name="date_lbl">Date</string>
    <string name="calories">Calories</string>
    <string name="carbs">Carbs</string>
    <string name="pro">Protein</string>
    <string name="fat">Fat</string>
    <string name="zero">0</string>

    // Meal Item strings
    <string name="meal_name">Meal Name</string>
    <string name="meal_time">Meal Time</string>

    <string name="cal_lbl">Calories: </string>
    <string name="carb_lbl">Carbs: </string>
    <string name="pro_lbl">Protein: </string>
    <string name="fat_lbl">Fat: </string>
    <string name="cal_val">0</string>
    <string name="carb_val">0g</string>
    <string name="pro_val">0g</string>
    <string name="fat_val">0g</string>

    <string name="macro_lbl">Macros: </string>
    <string name="carb_mac_val">0%/</string>
    <string name="pro_mac_val">0%/</string>
    <string name="fat_mac_val">0%</string>

    // Workout page strings
    <string name="wkout_title">Workouts</string>

    // Misc Strings
    <string name="date_frmt">MM/dd/yyyy, Day of Week</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>

</resources>
