<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/af_hdr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/add_food"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/af_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/af_r1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_name"/>

            <EditText
                android:id="@+id/af_name_in"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/af_r2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/af_r1"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meas_type"/>

            <RadioGroup
                android:id="@+id/af_mt_rdo_grp"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oz"/>

                <RadioButton
                    android:id="@+id/af_radio_oz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="25dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gram"/>

                <RadioButton
                    android:id="@+id/af_radio_g"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/af_r3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/af_r2"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Calories: "/>

            <EditText
                android:id="@+id/af_cal_in"
                android:layout_width="60dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Carbs: "/>

            <EditText
                android:id="@+id/af_carb_in"
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Protein: "/>

            <EditText
                android:id="@+id/af_pro_in"
                android:layout_width="40dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fat: "/>

            <EditText
                android:id="@+id/af_fat_in"
                android:layout_width="40dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/af_r4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/af_r3"
            android:gravity="center">

            <Button
                android:id="@+id/af_add_btn"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:text="@string/add"/>

            <Button
                android:id="@+id/af_clear_btn"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:text="@string/clear"/>

            <Button
                android:id="@+id/af_cancel_btn"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/af_ftr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    </RelativeLayout>

</LinearLayout>