<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/dp_hdr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/diet_title"
            android:textSize="24dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dp_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dp_hdr">

        <LinearLayout
            android:id="@+id/dp_bdy1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/dp_add_food_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_food" />

            <Button
                android:id="@+id/dp_create_meal_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_meal"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dp_bdy2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dp_body">

        <ScrollView
            android:id="@+id/dp_sv_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/dp_sv_rel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/dp_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>

            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dp_ftr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <Button
            android:id="@+id/dp_exit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit" />

    </RelativeLayout>

</RelativeLayout>
