<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/wo_hdr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="24dp"
            android:text="@string/wkout_title"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/wo_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wo_hdr">

        <ScrollView
            android:id="@+id/wo_sv_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/wo_bdy1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/wo_add_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add"/>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/wo_ftr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <Button
            android:id="@+id/wo_exit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"/>

    </RelativeLayout>
</RelativeLayout>