<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="380dp"
    android:layout_height="105dp"
    android:background="@drawable/cv_border"
    android:orientation="vertical"
    card_view:cardBackgroundColor="@color/colorPrimaryDark">

    <androidx.cardview.widget.CardView
        android:layout_width="375dp"
        android:layout_height="100dp"
        android:layout_gravity="center">

        <RelativeLayout
            android:id="@+id/stats_cv"
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <RelativeLayout
                android:id="@+id/calhdr"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/colorGrey">

                <TextView
                    android:id="@+id/cv_cal_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/calories" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/cv_cpf"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_below="@id/calhdr">

                <LinearLayout
                    android:id="@+id/lin_carbs"
                    android:layout_width="125dp"
                    android:layout_height="70dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/cv_carbs"
                        android:layout_width="125dp"
                        android:layout_height="35dp"
                        android:gravity="center"
                        android:text="@string/zero"
                        android:textColor="@color/red" />

                    <TextView
                        android:layout_width="125dp"
                        android:layout_height="35dp"
                        android:text="@string/carbs"
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lin_pro"
                    android:layout_width="125dp"
                    android:layout_height="70dp"
                    android:layout_toRightOf="@id/lin_carbs"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/cv_pro"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:gravity="center"
                        android:text="@string/zero"

                        android:textAlignment="center"
                        android:textColor="@color/green" />

                    <TextView
                        android:layout_width="125dp"
                        android:layout_height="35dp"
                        android:text="@string/pro"
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lin_fat"
                    android:layout_width="125dp"
                    android:layout_height="70dp"
                    android:layout_toRightOf="@id/lin_pro"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/cv_fat"
                        android:layout_width="125dp"
                        android:layout_height="35dp"
                        android:gravity="center"

                        android:text="@string/zero"
                        android:textColor="@color/blue" />

                    <TextView
                        android:layout_width="125dp"
                        android:layout_height="35dp"
                        android:text="@string/fat"
                        android:textAlignment="center" />

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.cardview.widget.CardView>