<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/meal_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/meal_name" />


            <TextView
                android:id="@+id/cals_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_toRightOf="@id/meal_title"
                android:layout_marginRight="5dp"
                android:text="@string/cal_lbl" />

            <TextView
                android:id="@+id/cals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="80dp"
                android:layout_toRightOf="@id/cals_lbl"
                android:text="5000" />

            <TextView
                android:id="@+id/time_eaten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:text="Time Eaten" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/nutrition_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title">


            <TextView
                android:id="@+id/carb_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="5sp"
                android:background="@color/colorGrey"
                android:text="@string/carb_lbl" />

            <TextView
                android:id="@+id/carbs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10sp"
                android:layout_toRightOf="@id/carb_lbl"
                android:text="400g" />


            <TextView
                android:id="@+id/pro_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/carbs"
                android:layout_marginRight="5sp"
                android:background="@color/colorGrey"
                android:text="@string/pro_lbl" />

            <TextView
                android:id="@+id/pro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10sp"
                android:layout_toRightOf="@id/pro_lbl"
                android:text="250g" />


            <TextView
                android:id="@+id/fat_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/pro"
                android:layout_marginRight="5sp"
                android:background="@color/colorGrey"
                android:text="@string/fat_lbl" />

            <TextView
                android:id="@+id/fat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/fat_lbl"
                android:text="100g" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/macros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nutrition_info">

            <TextView
                android:id="@+id/mac_lbl"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="5sp"
                android:background="@color/colorGrey"
                android:text="@string/macro_lbl" />

            <TextView
                android:id="@+id/mac_carb"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/mac_lbl"
                android:text="0%/"/>

            <TextView
                android:id="@+id/mac_pro"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/mac_carb"
                android:text="0%/"/>

            <TextView
                android:id="@+id/mac_fat"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/mac_pro"
                android:text="0%"/>

        </RelativeLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>